syntax = "proto3";

package yandex.cloud.loadtesting.v2;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/loadtesting/v2;loadtesting";
option java_package = "yandex.cloud.api.loadtesting.v2";

message Test {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    CREATED = 1;
    INITIATED = 2;
    PREPARING = 3;
    RUNNING = 4;
    FINISHING = 5;
    DONE = 6;
    POST_PROCESSING = 7;
    FAILED = 8;
    STOPPING = 9;
    STOPPED = 10;
    AUTOSTOPPED = 11;
  }

  enum Generator {
    GENERATOR_UNSPECIFIED = 0;
    PANDORA = 1;
    PHANTOM = 2;
  }

  string id = 1;
  string folder_id = 2;
  string name = 3;
  string description = 4;
  map<string, string> labels = 5;

  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp started_at = 7;
  google.protobuf.Timestamp finished_at = 8;
  google.protobuf.Timestamp updated_at = 9;

  Generator generator = 10;

  // AgentInstance ID where Test is running.
  string agent_instance_id = 11;

  // Target VM ID.
  string target_address = 12;
  int64 target_port = 13;

  // Version of object under test.
  string target_version = 14;

  // Test details
  string config = 15;
  oneof payload {
    string payload_urls = 16;
    string payload_id = 17;
  }
  repeated string cases = 18;

  Status status = 19;
  repeated string errors = 20;
  bool favorite = 21;

  int64 imbalance_point = 22;
  int64 imbalance_ts = 23;
  google.protobuf.Timestamp imbalance_at = 25;
  string imbalance_comment = 26;

  repeated Autostop autostops = 24;

  string user_id = 27;
}

message Autostop {
  enum AutostopType {
    AUTOSTOP_TYPE_UNSPECIFIED = 0;
    TIME = 1;
    HTTP = 2;
    NET = 3;
    QUANTILE = 4;
    INSTANCES = 5;
    METRIC_LOWER = 6;
    METRIC_HIGHER = 7;
    STEADY_CUMULATIVE = 8;
    LIMIT = 9;
    TOTAL_TIME = 10;
    TOTAL_HTTP = 11;
    TOTAL_NET = 12;
    NEGATIVE_HTTP = 13;
    NEGATIVE_NET = 14;
    HTTP_TREND = 15;
  }

  AutostopType autostop_type = 1;
  string autostop_criteria = 2;
  string autostop_case = 3;

}

message TestSummary {
  Test test_id = 1;
  repeated string errors = 2;
  repeated TestResults results = 3;
}

message TestResults{

  message CodeResults {
    int64 amount = 1;
    double percentage = 2;
  }

  string case_name = 1;
  map<string, double> quantiles = 2;
  map<string, CodeResults> proto_codes = 3;
  map<string, CodeResults> net_codes = 4;
  int64 max_rps = 5;
  int64 max_instances = 6;
}
